# OOP-ClassWork

./: OOP-Python-Assignments-1.ipynb  Python-Quiz1.ipynb  README.md
BloodDonationHackathonApplication/: README.md  main.py
BloodDonationHackathonApplication/blood_bank_managment_system/: CMakeLists.txt  README.md  admin.cpp  admin.hpp  hospital.cpp  hospital.hpp  main.cpp  user.cpp  user.hpp
OOP-Lab-Assignment/: SiddhantDixit_20bcs123_OOPTask1.ipynb  SiddhantDixit_20bcs123_OOPTask2.ipynb  SiddhantDixit_20bcs123_OOPTask3.ipynb  SiddhantDixit_20bcs123_OOPTask4.ipynb  SiddhantDixit_20bcs123_OOPTask5.ipynb
OOP-Lab-Assignment/Assign4Programs/: program.py  question1.py  question1practice.py  question2.py  question3.py
OOP-Lab-Class/: main.py  problem2.py  problem4.py  problem5.py
OOP/OOP-Practice/ClassPrograms/: employee.py  second.py
OOP/OOP-Practice/Destructors/: program.py
OOP/OOP-Practice/const_file/: const.py  glob_var.py  main.py  string_practice.py
OOP/OOP-Practice/conversions/: chartoint-viceversa.py
OOP/OOP-Practice/docstring/: docstring-tut.py
OOP/OOP-Practice/example/: operation.py  other.py
OOP/OOP-Practice/functions/: arguments.py  return_value.py
OOP/OOP-Practice/glbl/: program_glob.py
OOP/Practice Sessions/: KeyWords.ipynb  OOP_Encapsulation_Examples_cpp.ipynb  Operators_Practice.ipynb  PythonVariables.ipynb  Python_Control_Practice.ipynb  Python_DataTypes.ipynb  Python_DataTypes2.ipynb  Python_S4_Basics_Of_NumPy_Arrays.ipynb  Python_VariablesPractice_S2_210621_S1.ipynb  StringsNotebook.ipynb  colab_tutorial.ipynb
(+16 files in other folders)
